# WikidataOrcidScraper

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  build_and_run_container.sh  config_example.py  pyproject.toml
.github/workflows/: lint_python.yml
models/: exceptions.py  item.py  orcid.py  qlever.py  work.py  wos_base_model.py
templates/: error.html  footer.html  goto.html  head.html  index.html  navbar.html  results.html
